Обновление главная страница

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,10 @@
       <nav class="header__nav">
         <ul class="header__nav-list">
           <li class="header__nav-item"><a href="#" class="header__nav-link">Главная</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Поиск</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Моя медиатека</a></li>
+          <li class="header__nav-item"><a href="pages/search.html" class="header__nav-link">Поиск</a></li>
+          <li class="header__nav-item"><a href="pages/library.html" class="header__nav-link">Моя медиатека</a></li>
           <li class="header__nav-item"><a href="#" class="header__nav-link">Плейлисты</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Админка</a></li>
+          <li class="header__nav-item"><a href="pages/admin.html" class="header__nav-link">Админка</a></li>
         </ul>
       </nav>
       <div class="header__auth">
@@ -31,7 +31,7 @@
   <!-- Главный экран -->
   <section class="hero">
     <div class="hero__container">
-      <h1 class="hero__title">Слушай музыку, которая тебя вдохновляет</h1>
+      <h1 class="hero__title">Expo Music — музыка, которая взрывает мозг</h1>
       <p class="hero__subtitle">Загружай свои треки, создавай плейлисты и наслаждайся музыкой без ограничений.</p>
       <button class="hero__cta-button">Начать бесплатно</button>
     </div>
@@ -43,7 +43,7 @@
       <h2 class="featured__title">Рекомендуем послушать</h2>
       <div class="featured__grid">
         <div class="featured__card">
-          <img src="https://via.placeholder.com/150" alt="Альбом" class="featured__card-image">
+          <img src="assets/images/album1.jpg" alt="Альбом" class="featured__card-image">
           <h3 class="featured__card-title">Название альбома</h3>
           <p class="featured__card-artist">Исполнитель</p>
         </div>
@@ -58,7 +58,7 @@
       <h2 class="new-releases__title">Новые треки</h2>
       <div class="new-releases__scroll">
         <div class="new-releases__card">
-          <img src="https://via.placeholder.com/150" alt="Трек" class="new-releases__card-image">
+          <img src="assets/images/track1.jpg" alt="Трек" class="new-releases__card-image">
           <h3 class="new-releases__card-title">Название трека</h3>
           <p class="new-releases__card-artist">Исполнитель</p>
           <button class="new-releases__card-play">Play</button>
@@ -74,7 +74,7 @@
       <h2 class="popular-playlists__title">Популярные плейлисты</h2>
       <div class="popular-playlists__grid">
         <div class="popular-playlists__card">
-          <img src="https://via.placeholder.com/150" alt="Плейлист" class="popular-playlists__card-image">
+          <img src="assets/images/playlist1.jpg" alt="Плейлист" class="popular-playlists__card-image">
           <h3 class="popular-playlists__card-title">Название плейлиста</h3>
           <p class="popular-playlists__card-description">Описание плейлиста</p>
         </div>
