--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Expo Music</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/common.css">
+  <link rel="stylesheet" href="styles/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body class="page">
@@ -22,8 +23,8 @@
         </ul>
       </nav>
       <div class="header__auth">
-        <button class="header__auth-button">Войти</button>
-        <button class="header__auth-button header__auth-button--primary">Зарегистрироваться</button>
+        <button class="header__auth-button" onclick="window.location.href='pages/login.html'">Войти</button>
+        <button class="header__auth-button header__auth-button--primary" onclick="window.location.href='pages/register.html'">Зарегистрироваться</button>
       </div>
     </div>
   </header>
@@ -101,6 +102,6 @@
     </div>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
