Add frontent base auth

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,8 @@
         </ul>
       </nav>
       <div class="header__auth">
+        <span id="username" class="header__username"></span>
+        <button id="logout-button" class="header__auth-button" style="display: none;">Выйти</button>
         <button class="header__auth-button" onclick="window.location.href='pages/login.html'">Войти</button>
         <button class="header__auth-button header__auth-button--primary" onclick="window.location.href='pages/register.html'">Зарегистрироваться</button>
       </div>
