--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -28,6 +28,11 @@
         <i class="fas fa-lock"></i>
         <input type="password" id="password" name="password" placeholder="Введите пароль" required>
       </div>
+      <div class="input-container">
+        <label for="password_confirm">Подтверждение пароля</label>
+        <i class="fas fa-lock"></i>
+        <input type="password" id="password_confirm" name="password_confirm" placeholder="Подтвердите пароль" required>
+      </div>
       <button type="submit">Далее</button>
     </form>
     <p>Уже есть аккаунт? <a href="login.html">Войти</a></p>
