Backend update auth
Add logout system and refresh/access token system

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,8 @@
       <div class="header__auth">
         <span id="username" class="header__username"></span>
         <button id="logout-button" class="header__auth-button" style="display: none;">Выйти</button>
-        <button class="header__auth-button" onclick="window.location.href='pages/login.html'">Войти</button>
-        <button class="header__auth-button header__auth-button--primary" onclick="window.location.href='pages/register.html'">Зарегистрироваться</button>
+        <button id="login-button" class="header__auth-button">Войти</button>
+        <button id="register-button" class="header__auth-button header__auth-button--primary">Зарегистрироваться</button>
       </div>
     </div>
   </header>
