--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,17 @@
   </header>
  
   <!-- Главный экран -->
+  <!-- Модифицированная секция hero -->
   <section class="hero">
+    <div class="hero__visualizer">
+      <div class="visualizer-circle"></div>
+      <div class="visualizer-waves"></div>
+      <button class="hero__play-button">
+        <svg viewBox="0 0 24 24" width="24" height="24">
+          <path fill="currentColor" d="M8 5v14l11-7z"/>
+        </svg>
+      </button>
+    </div>
     <div class="hero__container">
       <h1 class="hero__title">Expo Music — музыка, которая взрывает мозг</h1>
       <p class="hero__subtitle">Загружай свои треки, создавай плейлисты и наслаждайся музыкой без ограничений.</p>
