--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
     <div class="hero__container">
       <h1 class="hero__title">Expo Music — музыка, которая взрывает мозг</h1>
       <p class="hero__subtitle">Загружай свои треки, создавай плейлисты и наслаждайся музыкой без ограничений.</p>
-      <button class="hero__cta-button">Начать бесплатно</button>
+      <!-- <button class="hero__cta-button">Начать бесплатно</button> -->
     </div>
   </section>
 
